# Intellihack_OutliearRejects_Task3

./: .gitignore  LLM_Fine_tuning_Challenge_Enhancing_Qwen_2_5_3B_for_AI_Research_QA.ipynb  README.md  llm_fine_tuning_challenge_enhancing_qwen_2_5_3b_for_ai_research_qa.py  pyproject.toml
data/: test.json  train.json  validation.json  vector_index.faiss  vector_texts.npy
docs/: Report.md  system_archiecture.mmd
